新建模块布局调整/支持对话式查询/汉化等