@@ -1,6 +1,7 @@
 (ns metabase.models.cloud-migration
   "A model representing a migration to cloud."
   (:require
+   [cheshire.core :as json]
    [clj-http.client :as http]
    [clojure.java.io :as io]
    [clojure.set :as set]
@@ -13,7 +14,6 @@
    [metabase.models.setting.cache :as setting.cache]
    [metabase.util :as u]
    [metabase.util.i18n :refer [deferred-tru tru]]
-   [metabase.util.json :as json]
    [metabase.util.log :as log]
    [methodical.core :as methodical]
    [toucan2.core :as t2]
@@ -43,7 +43,6 @@
 
 (defsetting store-url
   (deferred-tru "Store URL.")
-  :encryption :no
   :visibility :admin ;; should be :internal, but FE doesn't get internal settings
   :default    (str "https://store" (when (store-use-staging) ".staging") ".metabase.com")
   :doc        false
@@ -51,7 +50,6 @@
 
 (defsetting store-api-url
   (deferred-tru "Store API URL.")
-  :encryption :no
   :visibility :internal
   :default    (str "https://store-api" (when (store-use-staging) ".staging") ".metabase.com")
   :doc        false
@@ -59,7 +57,6 @@
 
 (defsetting migration-dump-file
   (deferred-tru "Dump file for migrations.")
-  :encryption :no
   :visibility :internal
   :default    nil
   :doc        false
@@ -67,7 +64,6 @@
 
 (defsetting migration-dump-version
   (deferred-tru "Custom dump version for migrations.")
-  :encryption :no
   :visibility :internal
   ;; Use a known version on staging when there's no real version.
   ;; This will cause the restore to fail on cloud unless you also set `migration-dump-file` to
@@ -222,7 +218,7 @@
                           {:form-params  {:part_count (count parts)}
                            :content-type :json})
                 :body
-                json/decode+kw)
+                (json/parse-string keyword))
 
             etags
             (->> (map (fn [[start end] [part-number url]]
@@ -294,7 +290,7 @@
                                                        (config/mb-version-info :tag))}
                   :content-type :json})
       :body
-      json/decode+kw
+      (json/parse-string keyword)
       (select-keys [:id :upload_url])
       (set/rename-keys {:id :external_id})))
 
@@ -308,7 +304,7 @@
   ;; make sure to use a version that store supports, and a dump for that version.
   #_(migration-dump-version! "v0.49.7")
   ;; make a new dump with any released metabase jar using the command below:
-  ;;   java --add-opens java.base/java.nio=ALL-UNNAMED -jar metabase.jar dump-to-h2 dump --dump-plaintext
+  ;;   java -jar metabase.jar dump-to-h2 dump --dump-plaintext
   #_(migration-dump-file! "/path/to/dump.mv.db")
   ;; force migration with a smaller multipart threshold (~6mb is minimum)
   #_(def ^:private part-size 6e6)
